
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* description; } ;


 int TARGETS ;
 int exit (int) ;
 int fprintf (int ,char*,char*) ;
 int stderr ;
 TYPE_1__* targets ;

void usage(char *s) {
    int i;

    fprintf(stderr,"Usage: \n"
     "%s -s <src net> -n <src mask> -d <target rtr ip> -f <file>"
  " -t <targ#>\n"
     "Options:\n"
     "-s <src net>  Use this network as source (as in target config)\n"
     "-n <src mask> Use this netmask as source (as in target config)\n"
     "-d <target>   This is the target router interface IP\n"
     "-f <file>     Use this as the new config for the router\n"
     "-t #          Use this target value set (see below)\n"
     "-a <area>     Use this OSPF area\n"
     "-v            Be verbose (-vv or -vvv recommended)\n"
     "-D            Directed attack (unicast) for 11.x targets\n"
     "-T            Test only - don't send\n"
     " --- barely used options ---\n"
     "-L #          Number of neighbors to announce (overflow size)\n"
     "-F #          Start of data (seen reverse to overflow)\n"
     "-S #          NOP sleet\n"
     "\n"
     "Known targets:\n"
     ,s);

    for (i=0;i<=TARGETS;i++)
 fprintf(stderr,"\t%s\n",targets[i].description);

    exit (1);
}
