; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/hardware/remote/extr_22271.c_usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/hardware/remote/extr_22271.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [739 x i8] c"Usage: \0A%s -s <src net> -n <src mask> -d <target rtr ip> -f <file> -t <targ#>\0AOptions:\0A-s <src net>  Use this network as source (as in target config)\0A-n <src mask> Use this netmask as source (as in target config)\0A-d <target>   This is the target router interface IP\0A-f <file>     Use this as the new config for the router\0A-t #          Use this target value set (see below)\0A-a <area>     Use this OSPF area\0A-v            Be verbose (-vv or -vvv recommended)\0A-D            Directed attack (unicast) for 11.x targets\0A-T            Test only - don't send\0A --- barely used options ---\0A-L #          Number of neighbors to announce (overflow size)\0A-F #          Start of data (seen reverse to overflow)\0A-S #          NOP sleet\0A\0AKnown targets:\0A\00", align 1
@TARGETS = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c"\09%s\0A\00", align 1
@targets = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* @stderr, align 4
  %5 = load i8*, i8** %2, align 8
  %6 = call i32 @fprintf(i32 %4, i8* getelementptr inbounds ([739 x i8], [739 x i8]* @.str, i64 0, i64 0), i8* %5)
  store i32 0, i32* %3, align 4
  br label %7

7:                                                ; preds = %20, %1
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @TARGETS, align 4
  %10 = icmp sle i32 %8, %9
  br i1 %10, label %11, label %23

11:                                               ; preds = %7
  %12 = load i32, i32* @stderr, align 4
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @targets, align 8
  %14 = load i32, i32* %3, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i64 %15
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i8*, i8** %17, align 8
  %19 = call i32 @fprintf(i32 %12, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8* %18)
  br label %20

20:                                               ; preds = %11
  %21 = load i32, i32* %3, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %3, align 4
  br label %7

23:                                               ; preds = %7
  %24 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
